[package]
name = "synvoid-http"
version = "0.1.0"
edition = "2021"

[dependencies]
synvoid-core = { path = "../synvoid-core" }
synvoid-config = { path = "../synvoid-config" }
bytes = "1"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful", "http1", "http2"] }
tokio = { version = "1", features = ["rt", "net", "time", "sync", "macros", "io-util"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
metrics = "0.22"
httparse = "1"
chrono = "0.4"
rand = "0.9"
sha1 = "0.10"
base64 = "0.22"
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
