[package]
name = "synvoid-http"
version = "0.1.0"
edition = "2021"

[features]
mesh = ["synvoid-config/mesh", "dep:synvoid-mesh", "synvoid-mesh/mesh"]

[dependencies]
synvoid-core = { path = "../synvoid-core" }
synvoid-config = { path = "../synvoid-config" }
synvoid-metrics = { path = "../synvoid-metrics" }
synvoid-waf = { path = "../synvoid-waf" }
synvoid-challenge = { path = "../synvoid-challenge" }
synvoid-http-client = { path = "../synvoid-http-client" }
synvoid-proxy = { path = "../synvoid-proxy" }
synvoid-mesh = { path = "../synvoid-mesh", optional = true }
synvoid-static-files = { path = "../synvoid-static-files" }
synvoid-ipc = { path = "../synvoid-ipc" }
ahash = "0.8"
anyhow = "1"
bytes = "1"
futures = "0.3"
dashmap = "7.0.0-rc2"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful", "http1", "http2"] }
tokio = { version = "1", features = ["rt", "net", "time", "sync", "macros", "io-util"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
metrics = "0.22"
httparse = "1"
chrono = "0.4"
rand = "0.9"
sha1 = "0.10"
base64 = "0.22"
serde_json = "1"
regex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
