[package]
name = "synvoid-icmp-filter"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
default = []
icmp-ebpf = ["dep:aya"]
icmp-pf = []
icmp-winfw = []
icmp-wfp = []

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
metrics = "0.22"
tracing = "0.1"
libc = "0.2"
aya = { version = "0.13", optional = true }

[dev-dependencies]
serde_json = "1"
