[package]
name = "synvoid-integrity"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
default = []
origin_key_exchange = []

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2"
http = "1"
parking_lot = "0.12"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
tracing = "0.1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["derive"] }
pqc = { path = "../../pqc" }
