[package]
name = "synvoid-metrics"
version = "0.1.0"
edition = "2021"

[features]
default = []
rkyv = []

[dependencies]
synvoid-core = { path = "../synvoid-core" }
synvoid-utils = { path = "../synvoid-utils" }
synvoid-waf = { path = "../synvoid-waf" }
chrono = "0.4"
parking_lot = "0.12"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync", "time"] }
tracing = "0.1"
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
dashmap = "7.0.0-rc2"
