[package]
name = "synvoid-platform"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Platform detection, filesystem utilities, and sandbox primitives for SynVoid"

[dependencies]
thiserror = "2"
tracing = "0.1"
libc = "0.2"
socket2 = { version = "0.6", features = ["all"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
serde_json = "1"
synvoid-ipc = { path = "../synvoid-ipc" }
