[package]
name = "synvoid-plugin-runtime"
version = "0.1.0"
edition = "2021"

[features]
default = []
mesh = []

[dependencies]
wasmtime = { version = "42.0.2", features = ["component-model"] }
bytes = "1"
http = "1"
http-body = "1"
http-body-util = "0.1"
parking_lot = "0.12"
tracing = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt"] }
