[package]
name = "synvoid-plugin-runtime"
version = "0.1.0"
edition = "2021"

[features]
default = []
mesh = []

[dependencies]
metrics = "0.22"
wasmtime = { version = "42.0.2", features = ["component-model"] }
axum = "0.8"
bytes = "1"
http = "1"
http-body = "1"
http-body-util = "0.1"
libloading = "0.8"
notify = "9.0.0-rc.3"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
synvoid-utils = { path = "../synvoid-utils", features = ["buffer"] }
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt"] }
toml = "0.8"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
