[package]
name = "synvoid-proxy-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8"
bytes = "1"
dashmap = "7.0.0-rc2"
http = "1"
moka = { version = "0.12", features = ["sync", "future"] }
parking_lot = "0.12"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "fs"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
