[package]
name = "synvoid-serverless"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
default = []
mesh = []

[dependencies]
synvoid-config = { path = "../synvoid-config" }
synvoid-plugin-runtime = { path = "../synvoid-plugin-runtime" }
bytes = "1"
http = "1"
http-body = "1"
parking_lot = "0.12"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }
serde_json = "1"
regex = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
